--- a/environments/playbook.yaml
+++ b/environments/playbook.yaml
@@ -1,9 +1,9 @@
 ---
  - hosts: "{{ group }}"
-   become: yes
+   become : true
    vars_files:
-   - '/home/orelbh/environments/{{group}}/group_vars/{{group}}.yaml'
-
+     - "{{ var_file_path }}"
+   tasks:
 
    tasks:
    - name: Deploy from git repo
