--- a/environments/playbook.yaml
+++ b/environments/playbook.yaml
@@ -48,6 +48,23 @@
      poll: 0
      args:
        chdir: '{{ deploy_directory }}/'
+       
+   - name: install dependencies
+     become: yes
+     command: "npm install {{ item }}"
+     args:
+       chdir: /home/{{ USERNAME }}/bootcamp-app
+     with_items:
+        - '@hapi/hapi@19'
+        - '@hapi/bell@12'
+        - '@hapi/boom@9'
+        - '@hapi/cookie@11'
+        - '@hapi/inert@6'
+        - '@hapi/joi@17'
+        - '@hapi/vision@6'
+        - 'dotenv@8'
+        - 'ejs@3'
+        - 'postgres@1'
 
    - name: Install pm2
      shell: npm install pm2 -g
